--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 }
 
 .App-header {
-  background-color: #222;
+  background-color: rgb(0, 0, 0);
   height: 150px;
   padding: 20px;
   color: white;
@@ -36,7 +36,7 @@
   text-align: center;
   width: 3em;
   font-size: 2em;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 8px rgb(255, 255, 255);
   margin: 1em;
   user-select: none;
 }
