--- a/src/App.css
+++ b/src/App.css
@@ -36,12 +36,12 @@
   text-align: center;
   width: 3em;
   font-size: 2em;
-  box-shadow: 0 4px 8px 4px rgb(255, 0, 0);
+  box-shadow: 6px 4px 8px 6px rgb(255, 230, 0);
   margin: 1em;
   user-select: none;
 }
 
 .activeCard { 
-  color: rgb(2, 255, 221); 
-  background: rgb(0, 4, 255); 
+  color: rgb(255, 230, 2); 
+  background: rgb(255, 0, 149); 
 }
